--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: Arimo;
+	src: url("fonts/Arimo-Regular.ttf");
+}
+
+@font-face {
+	font-family: Pacifico;
+	src: url("fonts/Pacifico.ttf");
+}
+
 body {
   margin: 0;
   padding: 0;
